360c-5: fixed some spacing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -47,6 +47,7 @@ body {
     min-height: 100vh;
     color: hsl(var(--black));
     font-family: 'Rubik', sans-serif;
+    background-color: hsl(var(--bright-white)) !important;
 }
 
 h1,
@@ -57,7 +58,6 @@ h4 {
 }
 
 main {
-    margin-top: 4rem;
     flex: 1;
     font-family: 'Rubik', sans-serif;
 }
@@ -89,7 +89,7 @@ main {
         @apply border-border outline-ring/50 text-base;
     }
     body {
-        @apply bg-primary-foreground text-black;
+        @apply bg-white text-black;
     }
 
     h1 {
@@ -109,7 +109,7 @@ main {
     }
 
     .nav-link {
-        @apply text-[16px] text-primary font-bold transition-colors;
+        @apply text-primary font-bold transition-colors;
     }
     .nav-link:hover {
         @apply hovered-nav-link; /* => color: hsl(var(--secondary)); */
@@ -131,11 +131,15 @@ main {
     .hovered-nav-link {
         color: hsl(var(--primary));
     }
+
+    .page-wrapper {
+        @apply max-w-custom mx-auto px-6 pt-2 pb-4;
+    }
 }
 
 @layer components {
     .nav-link {
-        @apply relative text-[16px] text-muted transition-colors;
+        @apply relative text-muted transition-colors;
     }
 
     .nav-link::after {
@@ -145,7 +149,7 @@ main {
         bottom: -2px;
         width: 0;
         height: 2px;
-        background-color: hsl(var(--secondary));
+        background-color: hsl(var(--primary));
         transition:
             width 0.3s ease,
             left 0.3s ease;
@@ -158,7 +162,7 @@ main {
     }
 
     .nav-link.active {
-        @apply font-bold text-secondary;
+        @apply font-bold text-primary;
     }
 }
 
